--- a/www/index.html
+++ b/www/index.html
@@ -9,20 +9,23 @@
   <script src="components/plugins.js"></script>
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="css/style.css">
-
-  <script>
-    ons.ready(function() {
-      console.log("Onsen UI is ready!");
-    });
-
-    if (ons.platform.isIPhoneX()) {
-      document.documentElement.setAttribute('onsflag-iphonex-portrait', '');
-      document.documentElement.setAttribute('onsflag-iphonex-landscape', '');
-    }
-  </script>
 </head>
-<body>
-  <br />
 
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-sn">
+        <h2>PLUGIN</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sn">
+        <div class="button-box">
+          <button class="btn-primary btn-block" id="alerta">!!!ALERTA!!!</button>
+          <button class="btn-primary btn-block" id="confirm">!!!CONFIRMA!!!</button>
+          <button class="btn-primary btn-block" id="beep">BEEP</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
